--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -5,7 +6,7 @@
     tools:context=".ForecastFragment">
 
     <ListView
-        android:id="@+id/listview_forecast"
+        android:id="@+id/list_view_forecast"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
